<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/lightBlueBack"
    tools:context=".SignInActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightBlueBack"
            android:fontFamily="@font/fibraoneregular"
            android:padding="16dp"
            android:text="@string/log_in_button"
            android:textColor="#b9c0cc"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/fibraoneregular"
            android:text="@string/create_a_profile_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/register_page_image_description"
            app:srcCompat="@drawable/register_page" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/fibraoneregular"
            android:maxLines="1"
            android:text="@string/privacy_policy_text"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />

        <Button
            android:id="@+id/facebook_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3b5998"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/fibraoneregular"
            android:includeFontPadding="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/facebook_registration"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="#DB4437"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/fibraoneregular"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/google_registration"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_with_email"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:fontFamily="@font/fibraoneregular"
            android:text="@string/email_registration"
            android:textAllCaps="false" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>